# quran_ar_en_word_scrapping

./: LICENSE  Quran Word by word scrapper.ipynb  pyproject.toml
